# ChangeLog for dev-php5/pecl-apc
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php5/pecl-apc/ChangeLog,v 1.62 2010/10/31 23:53:12 mabi Exp $

  31 Oct 2010; Matti Bickel <mabi@gentoo.org> pecl-apc-3.1.4-r1.ebuild:
  dropped keywords pending bug #343597

  15 Oct 2010; Brent Baude <ranger@gentoo.org> pecl-apc-3.1.4.ebuild:
  Marking pecl-apc-3.1.4 ppc for bug 337194

  14 Oct 2010; Markos Chandras <hwoarang@gentoo.org> pecl-apc-3.1.4.ebuild:
  Stable on amd64 wrt bug #337194

  14 Oct 2010; Christian Faulhammer <fauli@gentoo.org>
  pecl-apc-3.1.4.ebuild:
  stable x86, security bug 337194

  14 Oct 2010; Christian Faulhammer <fauli@gentoo.org>
  pecl-apc-3.1.3_p1-r1.ebuild:
  x86 stable, bug 336869

*pecl-apc-3.1.4-r1 (08 Oct 2010)

  08 Oct 2010; <olemarkus@gentoo.org> +pecl-apc-3.1.4-r1.ebuild:
  Added version supporting minor version slotting

*pecl-apc-3.1.4 (13 Sep 2010)

  13 Sep 2010; Matti Bickel <mabi@gentoo.org> -pecl-apc-3.0.16-r1.ebuild,
  -pecl-apc-3.0.17.ebuild, -pecl-apc-3.0.18.ebuild,
  -pecl-apc-3.0.18-r1.ebuild, -pecl-apc-3.1.3_p1.ebuild,
  +pecl-apc-3.1.4.ebuild:
  cleanup, version bump

*pecl-apc-3.1.3_p1-r1 (29 Jul 2010)

  29 Jul 2010; Matti Bickel <mabi@gentoo.org> +pecl-apc-3.1.3_p1-r1.ebuild:
  remove no longer recognized apache config option, support building with
  fpm (bug #330093)

*pecl-apc-3.1.3_p1 (02 Dec 2009)

  02 Dec 2009; Hanno Boeck <hanno@gentoo.org> +pecl-apc-3.1.3_p1.ebuild:
  Version bump, supports PHP 5.3.

  03 Nov 2009; Raúl Porcel <armin76@gentoo.org> pecl-apc-3.0.16-r1.ebuild,
  pecl-apc-3.0.17.ebuild, pecl-apc-3.0.18.ebuild, pecl-apc-3.0.18-r1.ebuild,
  pecl-apc-3.0.19.ebuild:
  Add ~ia64 wrt #282950

  29 Jul 2009; Jeremy Olexa <darkside@gentoo.org>
  -pecl-apc-3.0.12_p2.ebuild, -pecl-apc-3.0.15.ebuild,
  -pecl-apc-3.0.16.ebuild:
  Remove vulnerable version(s), bug 271727

  21 Aug 2008; Friedrich Oslage <bluebird@gentoo.org>
  pecl-apc-3.0.19.ebuild: