@@ -3,9 +3,11 @@ AUX pecl-apc-3.0.16-apc_set_signals.patch 317 RMD160 a154278cfd09e36dff07b2f29bf
 DIST APC-3.0.19.tgz 115735 RMD160 79c00d0e44eee268e8fc8ec8b66f1c4f5239320d SHA1 58d90ab757e606c878be3449a738016a08061dfd SHA256 a02677a7884361d64fbf3745c402f2a6ff313e817b0d0a2010acb64cd05247b0
 DIST APC-3.1.3p1.tgz 142277 RMD160 b7d359b68697adc8a7fe06c41ddaf804a55c911d SHA1 aed228105250f7d7f1deb57abb2770f1e19c2e49 SHA256 9e4e3163baf697bf0fba7bc3993f112c375f0ab2b40bba325d7109999ae4d28d
 DIST APC-3.1.4.tgz 147408 RMD160 c02ce7bf05eccfea15ea71178733778c6400a3be SHA1 53d8442e8b7e3804537d14e5776962cfdc5ae4d8 SHA256 5016ed62daafbf721312e58fe7c8ac81f61b8c3b951d9c9d0c221c3acfdc5d49
+DIST APC-3.1.5.tgz 147833 RMD160 9a51c2ce37e020db52564faa8fc5d1c1a5cc087b SHA1 6f9787cf70e10f5f883bf42f55e9b0fec768d2a1 SHA256 ae4ef05724df5069cb40aeac6869dce64fd110ab495b1d7ebf523dfab7a3344f
 EBUILD pecl-apc-3.0.19.ebuild 2658 RMD160 c7ae3f75c6dff03fa6578dc889af1a3848ad4ba9 SHA1 a5fc112c5ffb2ad8ec75b71badfbce459b51ea39 SHA256 507839b9d161bf8db67bb422216fd52e1b54de2cf903eb29e79e195348e1f596
 EBUILD pecl-apc-3.1.3_p1-r1.ebuild 2575 RMD160 eef2a1f954baef4d96622950ab1cfed4c6b8b127 SHA1 96129b0b046e37dbaca9c89ad408146ef6f1bda2 SHA256 eae17fbdd42e7416e726d91671e0213e11de762525bf5776d0783d3cc0bfa073
 EBUILD pecl-apc-3.1.4-r1.ebuild 2576 RMD160 79eb73c015d6017587d4e9958e59b88f4c3823ce SHA1 e6235483c72eeae4124ad54e131f7d8e484e75bb SHA256 1cec6a64a7bc2df05a1caea1f050258326ee6368c83adb300fbcd93814694d65
 EBUILD pecl-apc-3.1.4.ebuild 2568 RMD160 73f16af742b00365827457d0cf7186e2d6cc3342 SHA1 0689d8295679119711c8e5c3f27c76eaed80aaee SHA256 21d3eb02ef97658ad044e5ea4d90d5daa2a46cc84eabf05da8a509e2772a9de0
-MISC ChangeLog 8991 RMD160 cb05fa8f70f47ae146bcc1a37519e1c80039a05d SHA1 22809ad3b7d5b35a316b05612049f81840cbce62 SHA256 34e4e8298a9296753aa12582b5d0ff6e79cc13bd1da96c30cc30a89b9d527a08
+EBUILD pecl-apc-3.1.5.ebuild 2511 RMD160 5ad7cb35cbc8ae7e72932af5c8e2bfd4889de1a4 SHA1 899cc783760e9bdad792de1575b1df4956bd19c1 SHA256 a506da783916948e638593b4bd992b820f24333229a56131a8500dd9f5afb27b
+MISC ChangeLog 9105 RMD160 e6a90170319b068111805bda71111ea9296d2b9c SHA1 66b27647138544e77d71c9622465ec8967fbf2d0 SHA256 1b457326bfa84d50724144634201fd7b5e8fd930c940f62c6b0e5e57ea693b68
 MISC metadata.xml 157 RMD160 a98db3a086fae3c09a903dadbc05f60443ec4b1a SHA1 ddaa23cc35eb917bf8962b652442bebb1ce0f440 SHA256 54f8878ca0228e380abbaa4b529806b5533a6b9b51b3b16c0909e906586a91a1
