@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.4733 2010/11/01 21:13:22 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.4734 2010/11/02 19:57:12 ssuominen Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  02 Nov 2010; Samuli Suominen <ssuominen@gentoo.org> package.mask:
+  Lastrite acer_acpi and acerhk.
 
   01 Nov 2010; Markos Chandras <hwoarang@gentoo.org> package.mask:
   Masking ncrack releases since they are in alpha stage
